--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "holani-min"
-version = "0.8.1"
+version = "0.8.2"
 edition = "2021"
 
 [dependencies]
-holani = { git = "https://github.com/LLeny/holani.git", tag = "0.8.1" }
+holani = { git = "https://github.com/LLeny/holani.git", tag = "0.8.2", features = [
+  "comlynx_shared_memory"
+] }
 macroquad = "0.4"
 env_logger = { version = "0.11.5", default-features = false, features = [
   "auto-color",
