--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "holani-min"
-version = "0.9.2"
+version = "0.9.4"
 edition = "2021"
 
 [dependencies]
-holani = { git = "https://github.com/LLeny/holani.git", tag = "0.9.2", features = [
-  "comlynx_shared_memory"
+holani = { git = "https://github.com/LLeny/holani.git", tag = "0.9.4", features = [
+  "comlynx_shared_memory",
 ] }
 macroquad = "0.4"
 env_logger = { version = "0.11.5", default-features = false, features = [
@@ -17,6 +17,6 @@ log = { version = "0.4", features = [
   "release_max_level_warn",
 ] }
 kanal = { git = "https://github.com/fereidani/kanal.git", rev = "125fb7876797f20c632b25660c2f41c2908f9007" }
-rodio = "0.19"
+rodio = "0.20"
 clap = { version = "4.5", features = ["derive"] }
 thread-priority = "1.1.0"
