--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.9.6"
 edition = "2021"
 
 [dependencies]
-holani = { git = "https://github.com/LLeny/holani.git", tag = "0.9.6", features = [
-  "comlynx_shared_memory",
+holani = { git = "https://github.com/LLeny/holani.git", branch = "test_comlynx_ext", features = [
+  "comlynx_external",
 ] }
 macroquad = "0.4"
 env_logger = { version = "0.11.5", default-features = false, features = [
