--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,26 @@
 [package]
 name = "holani-min"
-version = "0.9.6"
+version = "0.9.8"
+rust-version = "1.84"
 edition = "2021"
 
 [dependencies]
-holani = { git = "https://github.com/LLeny/holani.git", rev = "fd8126d5cfcab70c5abb9d6b08ed83d2b8b642b2" }
-macroquad = "0.4"
-env_logger = { version = "0.11.5", default-features = false, features = [
+holani = { git = "https://github.com/LLeny/holani.git", tag = "0.9.8" }
+macroquad = "0.4.14"
+env_logger = { version = "0.11.8", default-features = false, features = [
   "auto-color",
   "humantime",
 ] }
-log = { version = "0.4", features = [
+log = { version = "0.4.28", features = [
   "max_level_trace",
   "release_max_level_warn",
 ] }
-kanal = { git = "https://github.com/fereidani/kanal.git", rev = "125fb7876797f20c632b25660c2f41c2908f9007" }
-rodio = "0.20"
-clap = { version = "4.5", features = ["derive"] }
-thread-priority = "1.2.0"
+kanal = { git = "https://github.com/fereidani/kanal.git", rev = "9a4b98d570258410fa07c5329e3c4499533b1e92" }
+rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
+dasp_sample = "0.11.0"
+ringbuf = "0.4.8"
+clap = { version = "4.5.53", features = ["derive"] }
+thread-priority = "3.0.0"
 
 [features]
 default = ["holani/comlynx_shared_memory"]
@@ -26,3 +29,7 @@ comlynx_external = ["holani/comlynx_external"]
 [profile.release]
 codegen-units = 1
 lto = "fat"
+
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+similar_names = "allow"
