Fix ubuntu libasound2 -> libasound2t64

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           uname -a
           find $(rustc --print sysroot) -name 'libstd-*.rlib' | sed -ne 's:^.*/\([^/]*\)/lib/libstd-[^/]*.rlib:\1:p'
       - name: apt
-        run: sudo apt update && sudo apt install -yq libasound2 libasound2-dev alsa-tools alsa-utils
+        run: sudo apt update && sudo apt install -yq libasound2t64 alsa-tools alsa-utils
       - name: Checkout code from repository
         uses: actions/checkout@v4
       - name: Build Base
